buildscript {
	repositories {
		maven {
			url = 'https://repo.spongepowered.org/repository/maven-public/'
		}
		mavenCentral()
	}
	dependencies {
		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
	}
}

plugins {
	id 'idea'
	id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
	id 'org.parchmentmc.librarian.forgegradle' version '1.+'
	id 'org.spongepowered.mixin' version '0.7.+'
	id 'maven-publish'
}

apply plugin: 'org.spongepowered.mixin'

group = mod_group_id
version = mod_version

base {
	archivesName = mod_id
}

java {
	toolchain.languageVersion = JavaLanguageVersion.of(17)
	withSourcesJar()
}

minecraft {
	mappings channel: 'parchment', version: '2023.09.03-1.20.1'
	copyIdeResources = true
	runs {
		configureEach {
			workingDirectory project.file('run')
			property 'forge.logging.markers', 'REGISTRIES'
			property 'forge.logging.console.level', 'debug'

			mods {
				"${mod_id}" {
					source sourceSets.main
				}
			}
		}

		client {
			property 'forge.enabledGameTestNamespaces', mod_id
		}

		server {
			property 'forge.enabledGameTestNamespaces', mod_id
			args '--nogui'
		}
		gameTestServer {
			property 'forge.enabledGameTestNamespaces', mod_id
		}

		data {
			workingDirectory project.file('run-data')
			args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
		}
	}
}

mixin {
	add sourceSets.main, "${mod_id}.refmap.json"

	config "${mod_id}.mixins.json"
	config "${mod_id}.ftbquests.mixins.json"
}

sourceSets.main.resources {
	srcDir 'src/generated/resources'
}

repositories {
	maven {
		url 'https://modmaven.dev/'
	}
	maven {
		url "https://maven.createmod.net/"
	}
	maven {
		url 'https://maven.blamejared.com'
	}
	maven {
		name = "Illusive Soulworks maven"
		url = "https://maven.theillusivec4.top/"
	}
	maven {
		url "https://cursemaven.com"
	}
	maven {
		url "https://maven.firstdark.dev/snapshots"
	}
	maven {
		url = 'https://maven.minecraftforge.net/'
	}
	flatDir {
		dirs "build/libs"
	}
}

dependencies {
	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
	// TCon
	compileOnly fg.deobf("curse.maven:tinkers-construct-74072:6266282")
	runtimeOnly fg.deobf("curse.maven:tinkers-construct-74072:6266282")
	// Mantle
	compileOnly fg.deobf("curse.maven:mantle-74924:7414488")
	runtimeOnly fg.deobf("curse.maven:mantle-74924:7414488")
	// IE
	compileOnly fg.deobf("curse.maven:immersive-engineering-231951:6206989")
	// Mekanism
	compileOnly fg.deobf("mekanism:Mekanism:1.20.1-10.4.15.75")
	// Create + Flywheel + Registrate
	implementation fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
	implementation fg.deobf("net.createmod.ponder:Ponder-Forge-${minecraft_version}:${ponder_version}")
	compileOnly fg.deobf("dev.engine-room.flywheel:flywheel-forge-api-${minecraft_version}:${flywheel_version}")
	runtimeOnly fg.deobf("dev.engine-room.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
	implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
	compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
	implementation("io.github.llamalad7:mixinextras-forge:0.4.1")
	// KubeJS
	compileOnly fg.deobf("curse.maven:kubejs-238086:5853326")
	runtimeOnly fg.deobf("curse.maven:kubejs-238086:5853326")

	// Architectury
	runtimeOnly fg.deobf("curse.maven:architectury-api-419699:5137938")
	// Rhino
	compileOnly fg.deobf("curse.maven:rhino-416294:6186971")
	runtimeOnly fg.deobf("curse.maven:rhino-416294:6186971")
	// Jade
	compileOnly fg.deobf("curse.maven:jade-324717:6106101")
	runtimeOnly fg.deobf("curse.maven:jade-324717:6106101")
	// Patchouli
	compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-84.1-FORGE:api")
	runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-84.1-FORGE")
	// Curios
	compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:5.14.1+1.20.1")
	runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:5.14.1+1.20.1")
	// Jei
	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:15.20.0.103")
	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:15.20.0.103")
	runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:15.20.0.103")
	// ftb quests
	compileOnly fg.deobf("curse.maven:ftb-quests-forge-289412:7608804")
	// FTB Library (FTB Quests 的 UI 基础库)
	compileOnly fg.deobf("curse.maven:ftb-library-forge-404465:7296748")
	// Lomkok
	compileOnly 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'
}
tasks.named('processResources', ProcessResources).configure {
	var replaceProperties = [
			minecraft_version      : minecraft_version,
			minecraft_version_range: minecraft_version_range,
			forge_version          : forge_version,
			forge_version_range    : forge_version_range,
			loader_version_range   : loader_version_range,
			mod_id                 : mod_id,
			mod_name               : mod_name,
			mod_license            : mod_license,
			mod_version            : mod_version,
			mod_authors            : mod_authors
	]

	inputs.properties replaceProperties

	filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
		expand replaceProperties + [project: project]
	}
}

tasks.named('jar', Jar).configure {
	manifest {
		attributes([
				"Specification-Title"     : mod_id,
				"Specification-Vendor"    : mod_authors,
				"Specification-Version"   : "1",
				"Implementation-Title"    : project.name,
				"Implementation-Version"  : project.jar.archiveVersion,
				"Implementation-Vendor"   : mod_authors,
				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
		])
	}

	finalizedBy 'reobfJar'
}

tasks.register('devJar', Jar) {
	from sourceSets.main.output
	archiveClassifier.set('dev')

	manifest {
		attributes([
				"Specification-Title"     : mod_id,
				"Specification-Vendor"    : mod_authors,
				"Specification-Version"   : "1",
				"Implementation-Title"    : project.name,
				"Implementation-Version"  : project.jar.archiveVersion,
				"Implementation-Vendor"   : mod_authors,
				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
		])
	}
}

// 让 build 自动执行 devJar
tasks.build {
	dependsOn tasks.named("devJar")
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	/**
	 * 用于ProbeJS联动
	 * 可以直接将参数名裸露出去在ProbeJS生成的TS文件内显示
	 * 裸露前:
	 * static loadResource(arg0: string): ResourceLocation;
	 * 裸露后:
	 * static loadResource(path: string): ResourceLocation;
	 */
	options.compilerArgs << "-parameters"
}

afterEvaluate {
	minecraft.runs.data.args.removeIf { it == '--mixin.config' || it.endsWith('.mixins.json') }
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			artifactId = mod_id
			from components.java

			artifact(tasks.named("devJar"))
		}
	}
	repositories {
		maven {
			url = "https://maven.lirxowo.com/releases"
			credentials {
				username = findProperty("reposiliteUser")
				password = findProperty("reposilitePassword")
			}
		}
		mavenLocal()
	}
}